# GameEngineStudy

./: CMakeLists.txt  README.md
01_MathFoundations/: CMakeLists.txt
01_MathFoundations/physics/: bouncing_ball.cpp
01_MathFoundations/vectors/: main.cpp  vector2d.cpp  vector2d.h  vector3d.cpp  vector3d.h
02_CppRefresh/modern_features/: cpp_assessment.cpp
